<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alexmarck.wallpaperoftheday.LicenseActivity"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/imageNameString"
        android:id="@+id/textView3"
        android:layout_margin="@dimen/default_margins" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/naString"
        android:id="@+id/nameTextView"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_margin="@dimen/default_margins"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/imageLicenseString"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="@dimen/default_margins" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/naString"
        android:id="@+id/licenseTextView"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="@dimen/default_margins"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/imageAuthorString"
        android:id="@+id/textView4"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="@dimen/default_margins" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/naString"
        android:id="@+id/authorTextView"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_margin="@dimen/default_margins"
        android:gravity="fill_horizontal"
        android:layout_gravity="fill_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewMoreInfo"
        android:id="@+id/button12"
        android:layout_row="3"
        android:layout_column="0"
        android:enabled="true"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/default_margins"
        android:onClick="viewMoreInformation"
        android:layout_gravity="fill_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBack"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/default_margins"
        android:layout_gravity="fill_horizontal|bottom"
        android:onClick="returnBack"
        android:id="@+id/backButton"
        android:enabled="true"
        android:nestedScrollingEnabled="false" />
</GridLayout>
