<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alexmarck.wallpaperoftheday.AutomaticChanging"
    android:columnCount="2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_row="0"
        android:gravity="center_horizontal"
        android:text="@string/minutesBetweenChangesString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hoursEditText"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_columnSpan="2"
        android:editable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAndStartString"
        android:id="@+id/button4"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="saveAndStart"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopBackgroundServiceString"
        android:id="@+id/button5"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/default_margins"
        android:layout_gravity="fill_horizontal"
        android:onClick="stopBackgroundService" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/serviceStatusString"
        android:id="@+id/serviceStatusTextView"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/default_margins" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBack"
        android:id="@+id/button6"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal|bottom"
        android:layout_margin="@dimen/default_margins"
        android:enabled="true"
        android:onClick="goBack" />
</GridLayout>
