<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alexmarck.wallpaperoftheday.MainActivity">

    <Button
        android:id="@+id/randomDayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_row="4"
        android:background="@android:color/holo_blue_bright"
        android:elegantTextHeight="false"
        android:elevation="@dimen/button_elevation"
        android:enabled="true"
        android:onClick="changeWallpaperRandom"
        android:text="@string/setRandomImageString"
        android:textColor="#000000" />

    <Button
        android:id="@+id/pickDayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_row="0"
        android:background="@android:color/holo_green_light"
        android:elevation="@dimen/button_elevation"
        android:enabled="true"
        android:onClick="pickDay"
        android:text="@string/pickImageFromDayString"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_row="2"
        android:background="@android:color/holo_orange_light"
        android:elevation="@dimen/button_elevation"
        android:onClick="setAutomaticChanging"
        android:text="@string/setAutomaticRandomChangingString" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_row="1"
        android:background="@android:color/holo_red_light"
        android:onClick="setTodayImage"
        android:text="@string/setTodaysImageString" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:layout_row="3"
        android:background="@android:color/holo_purple"
        android:enabled="true"
        android:onClick="setDailyAutomaticChanging"
        android:text="@string/setAutomaticDailyChangingString" />


</GridLayout>
