<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alexmarck.wallpaperoftheday.AutomaticDailyChanging"
    android:columnCount="2">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDailyChangingString"
        android:id="@+id/button9"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"
        android:enabled="true"
        android:layout_margin="@dimen/default_margins"
        android:onClick="startAlarm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dailyChangingString"
        android:id="@+id/alarmStatusTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopDailyChangingString"
        android:id="@+id/button10"
        android:layout_row="2"
        android:layout_column="0"
        android:enabled="true"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margins"
        android:onClick="stopAlarm" />
</GridLayout>
